# tola-ssg

./: .gitignore  .ignore  Cargo.toml  FIX_VDOM.md  NEW_VDOM.md  PLAN.md  PLAN_DIFF_OD.md  PLAN_NEXT.md  PLAN_VDOM.md  PLAN_VDOM_NEXT.md  README.md  a.txt  b.txt  build-release.sh  flake.nix  guix.scm
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
__test_site/: tola.toml
__test_site/content/: index.html  index.typ
__test_site/templates/: base.typ
assets/serve/: welcome.html
crates/tola-vdom/: Cargo.toml  README.md
crates/tola-vdom/macros/: Cargo.toml
crates/tola-vdom/macros/src/: lib.rs
crates/tola-vdom/src/: attr.rs  cache.rs  capability.rs  diff.rs  id.rs  lcs.rs  lib.rs  macros.rs  phase.rs  span.rs
crates/tola-vdom/src/convert/: mod.rs  typst.rs
crates/tola-vdom/src/node/: element.rs  family_ext.rs  text.rs  types.rs
crates/tola-vdom/src/transform/: core.rs  indexer.rs  mod.rs
crates/tola-vdom/src/transforms/: indexer.rs
crates/tola_core/: Cargo.toml
crates/tola_core/src/: cache.rs  hash.rs  lib.rs  transform.rs
crates/tola_typst/: Cargo.toml
crates/tola_typst/src/: diagnostic.rs  file.rs  font.rs  lib.rs  library.rs  package.rs  world.rs
crates/tola_vdom/: Cargo.toml
crates/tola_vdom/src/: attr.rs  cache.rs  diff.rs  family.rs  hash.rs  id.rs  lcs.rs  lib.rs  macros.rs  phase.rs  transform.rs
crates/tola_vdom/src/node/: document.rs  element.rs  family_ext.rs  mod.rs  text.rs  types.rs
crates/tola_vdom/src/transforms/: indexer.rs  mod.rs  render.rs
crates/typst-batch/src/: config.rs  diagnostic.rs  file.rs  lib.rs  world.rs
docs/: PATCH_ARCHITECTURE.md  TTG_ARCHITECTURE.md  TTG_REFINEMENT_SUMMARY.md  TTG_TASKS.md  a.txt
resources/starter_example/: README.md  tola.toml
resources/starter_example/assets/styles/: tailwind.css
resources/starter_example/content/: index.typ
resources/starter_example/content/posts/: hello-world.typ
resources/starter_example/public/: index.html
resources/starter_example/templates/: base.typ  minimal.typ
resources/starter_example/utils/: helpers.typ
src/: build.rs  cli.rs  compile.rs  compiler.rs  config.rs  deploy.rs  diagnostic.rs  driver.rs  exec.rs  file.rs  init.rs  lib.rs  logger.rs  main.rs  package.rs  serve.rs  vdom_compile.rs  watch.rs  world.rs
src/actor/: compiler.rs  coordinator.rs  fs.rs  messages.rs  mod.rs  vdom.rs  ws.rs
src/cache/: mod.rs  redb_storage.rs  storage.rs
src/compiler/: assets.rs  bridge.rs  deps.rs  meta.rs  mod.rs  pages.rs  typst.rs  utils.rs  watch.rs
src/compiler/meta/: asset.rs  mod.rs  page.rs
src/compiler/pages/: collect.rs  compile.rs  mod.rs  write.rs
src/config/: base.rs  build.rs  defaults.rs  deploy.rs  error.rs  handle.rs  mod.rs  path.rs  paths.rs  serve.rs
src/data/: mod.rs  store.rs  types.rs  virtual_fs.rs
src/embed/: mod.rs
src/embed/css/: enhance.css
src/embed/serve/: directory.html  hotreload.js
src/freshness/: cache.rs  hash.rs  mod.rs  mtime.rs
src/generator/: mod.rs  rss.rs  sitemap.rs
src/hotreload/: cache.rs  diff.rs  lcs.rs  message.rs  mod.rs  protocol.rs  server.rs  ws.rs
src/hotreload/logic/: classify.rs  compile.rs  diff.rs  init.rs  mod.rs
src/pipeline/: cache.rs  compile.rs  diff.rs  mod.rs
src/typst_lib/: diagnostic.rs  file.rs  font.rs  mod.rs  world.rs
src/utils/: build.rs  category.rs  command.rs  css.rs  date.rs  exec.rs  git.rs  hash.rs  log.rs  meta.rs  minify.rs  mod.rs  page.rs  path.rs  platform.rs  rss.rs  sitemap.rs  slug.rs  svg.rs  typst.rs  watch.rs  xml.rs
src/utils/git/: ignore.rs  remote.rs  repo.rs  tree.rs
src/utils/svg/: compress.rs  extract.rs  mod.rs  optimize.rs  transform.rs
src/utils/xml/: assets.rs  common.rs  head.rs  link.rs  mod.rs  processor.rs
src/vdom/: attr.rs  cache.rs  convert.rs  diff.rs  family.rs  folder.rs  id.rs  macros.rs  mod.rs  node.rs  phase.rs  transform.rs
src/vdom/node/: document.rs  element.rs  family_ext.rs  mod.rs  text.rs  types.rs
src/vdom/transforms/: indexer.rs  mod.rs  render.rs
tests/: ttg_demo.rs
