[package]
name = "tola-vdom"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Type-safe multi-phase HTML/XML DOM with TTG pattern"
keywords = ["vdom", "html", "dom", "diff", "transform"]
categories = ["parsing", "web-programming"]
repository = "https://github.com/aspect-rs/tola-vdom"

[features]
default = ["typst"]
serde = ["dep:serde"]
parallel = ["dep:rayon"]
hotreload = ["dep:tokio", "dep:tungstenite"]
rkyv = ["dep:rkyv"]
# Typst integration - convert from typst HtmlDocument
typst = ["dep:typst-batch"]

[dependencies]
blake3 = "1.8"
smallvec = { version = "1.13", features = ["union", "const_generics"] }
compact_str = "0.8"
paste = "1.0"
rustc-hash = "2.1"

# Typst integration (optional, via typst-batch)
typst-batch = { path = "../../typst-batch", features = ["svg"], optional = true }

# Optional dependencies
serde = { version = "1.0", features = ["derive"], optional = true }
rayon = { version = "1.10", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }
tungstenite = { version = "0.27", optional = true }
rkyv = { version = "0.8", optional = true }
