[package]
name = "tola_core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Core infrastructure for document processing pipelines"
keywords = ["pipeline", "transform", "cache"]
categories = ["development-tools"]
repository = "https://github.com/aspect-rs/tola"

[features]
default = ["std"]
std = []
serde = ["dep:serde"]
parallel = ["dep:rayon"]

[dependencies]
smallvec = "1.13"
serde = { version = "1.0", features = ["derive"], optional = true }
rayon = { version = "1.10", optional = true }
